Refactor: extract complex logic from Node into focused utility classes
  Node.java was a 1,037-line God Class mixing identity, CRUD, graph
  delegation, metadata, and 308 lines of complex transformation logic.

  Extract three new static utility classes (Extract Class pattern):
  - NodeAbsorptionHandler: absorbs a parent node into its utility child
    by multiplying/maximizing potentials and updating graph links.
  - VariableTypeConverter: converts a node's variable type (FINITE_STATES,
    NUMERIC, DISCRETIZED) with cascading potential updates to children.
  - UtilityFunctionComputer: recursively computes utility functions for
    super-value nodes.

  Also move setPotentialConsistently() to
  LinkRestrictionPotentialOperations.setPotentialWithRestrictions().

  Remove dead code: samplePotentials() (zero callers), setUniformPotential()
  (duplicated PotentialOperations.getUniformPotential()), and commented-out
  switch cases.

  Fix PotentialUtils.getPotentialName() to walk up the class hierarchy when
  looking for @PotentialType, so UncertainTablePotential and
  StrategicTablePotential inherit the "Table" name from their parent.